--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
       <img width="300px" src="logo.png" alt="The Lab Tints & Visuals LLC">
 
       <h1>The Lab Tints & Visuals LLC</h1>
-      <p>Automotive • Vinyl Wrapping • Residential</p>
+      <p>Automotive Tint • Residential Tint • Vinyl Wrapping </p>
       <!-- <a href="tel:3049162052" class="btn btn-dark btn-lg mt-4 fw-bold">Call for an Estimate</a> -->
       <a href="https://app.squareup.com/appointments/book/x4jp12s4s80fgx/L2DA08QR9AZBE/start?hl=en-US&gei=OoJ-aZX5JovJp84PmJTuuQk&rwg_token=AFd1xnGo3DDrItElV3frlwOg8FByLvpG3h2mrFBjZE4dVapKLmn7vM5gC7P15yd67miPYiVjaiXXdOfeDRYoR29sQLPI-Zbdfw%3D%3D"
         class="btn btn-warning btn-lg mt-4 fw-bold">Book Online</a>
