--- a/index.html
+++ b/index.html
@@ -14,34 +14,18 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-
   <style>
-    #protected-content {
-      display: none;
-    }
-
-    #login-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: #f8f9fa;
-      z-index: 1000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
+    /* --- 1. CORE THEME & VARIABLES --- */
     :root {
       --bg: #f9fafb;
       --text: #111827;
       --card: #ffffff;
       --muted: #6b7280;
-      --accent: #f97316;
+      --accent: #111827;
       --input-bg: #ffffff;
       --input-text: #111827;
       --input-border: #d1d5db;
+      --hero-bg: linear-gradient(135deg, #0b0f19, #1f2933);
     }
 
     body.dark {
@@ -49,14 +33,10 @@
       --text: #e5e7eb;
       --card: #111827;
       --muted: #9ca3af;
+      --accent: #ffffff;
       --input-bg: #1f2937;
       --input-text: #f9fafb;
       --input-border: #374151;
-    }
-
-    body.dark .text-muted {
-      color: #d1d5db !important;
-      /* A soft light grey/white */
     }
 
     body {
@@ -64,9 +44,53 @@
       color: var(--text);
       font-family: 'Inter', system-ui, sans-serif;
       padding-bottom: 160px;
-      transition: .3s;
+      transition: background 0.3s, color 0.3s;
     }
 
+    /* --- 2. OVERLAYS & PRELOADER --- */
+    #protected-content {
+      display: none;
+    }
+
+    #preloader-overlay {
+      position: fixed;
+      inset: 0;
+      background-color: #0b0f19;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+      transition: opacity 2.5s ease-out;
+    }
+
+    #preloader-overlay img {
+      max-width: 25%;
+      margin-bottom: 20px;
+      animation: logoZoom 4s infinite alternate;
+    }
+
+    @keyframes logoZoom {
+      from {
+        transform: scale(1);
+      }
+
+      to {
+        transform: scale(1.1);
+      }
+    }
+
+    .spinner-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, .6);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 10000;
+    }
+
+    /* --- 3. TYPOGRAPHY & BUTTONS --- */
     h1,
     h2,
     h5 {
@@ -80,81 +104,106 @@
     }
 
     .hero {
-      background: linear-gradient(135deg, #0b0f19, #1f2933);
+      background: var(--hero-bg);
       color: white;
       padding: 90px 20px;
       text-align: center;
       position: relative;
     }
 
-    .theme-toggle {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      width: 44px;
-      height: 44px;
-      border-radius: 50%;
-      border: none;
-      background: rgba(255, 255, 255, .15);
-      color: white;
-      font-size: 22px;
-      cursor: pointer;
-    }
-
-    .card-box {
-      background: var(--card);
-      border-radius: 16px;
-      padding: 24px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, .05);
-    }
-
-    /* ---------- INSTAGRAM BUTTON THEME-AWARE ---------- */
     .btn-follow-insta {
       border: 1px solid var(--text);
       color: var(--text);
       font-weight: 600;
       transition: all 0.3s ease;
-      font-family: 'Inter', sans-serif;
     }
 
     .btn-follow-insta:hover {
       background-color: var(--accent);
-      border-color: var(--accent);
-      color: white !important;
+      color: var(--bg) !important;
       transform: scale(1.05);
     }
 
-    .service-card {
-      border-left: 4px solid var(--accent);
+    /* --- 4. SERVICE CARDS & ICONS --- */
+    .service-card-premium {
+      background: var(--card);
+      border-radius: 18px;
+      padding: 28px 24px;
+      height: 100%;
+      border: 1px solid rgba(255, 255, 255, 0.06);
+      border-left: 4px solid var(--accent) !important;
+      box-shadow: 0 12px 35px rgba(0, 0, 0, 0.15);
+      transition: transform 0.25s ease;
     }
 
     .service-icon {
-      font-size: 36px;
-      color: var(--accent);
+      font-size: 38px;
+      color: var(--accent) !important;
+      margin-bottom: 15px;
+      display: block;
     }
 
+    .services-subtext {
+      color: var(--muted) !important;
+    }
+
+    /* --- 5. TESTIMONIALS --- */
+    .testimonial-card {
+      background: var(--card);
+      border-radius: 16px;
+      padding: 24px;
+      height: 100%;
+      border: 1px solid rgba(0, 0, 0, 0.05);
+    }
+
+    body.dark .testimonial-card {
+      background: #0f172a;
+      border: 1px solid rgba(255, 255, 255, 0.08);
+    }
+
+    .testimonial-card .stars {
+      color: #facc15;
+      margin-bottom: 10px;
+    }
+
+    /* --- 6. FORM & INPUT FIXES (DARK MODE TEXT REVEAL) --- */
     .form-control {
       background: var(--input-bg);
       color: var(--input-text);
       border: 1px solid var(--input-border);
     }
 
-    .form-control:focus {
-      border-color: var(--accent);
-      box-shadow: 0 0 0 .15rem rgba(249, 115, 22, .25);
+    /* Force light text in dark mode inputs */
+    body.dark .form-control,
+    body.dark select.form-control,
+    body.dark textarea.form-control {
+      color: #ffffff !important;
+      background-color: #1f2937 !important;
     }
 
+    /* Fix for typing visibility and focus */
+    body.dark .form-control:focus {
+      color: #ffffff !important;
+      background-color: #1f2937 !important;
+      border-color: var(--accent);
+      box-shadow: 0 0 0 .15rem rgba(255, 255, 255, .1);
+    }
+
+    body.dark .form-control::placeholder {
+      color: #9ca3af !important;
+    }
+
+    /* --- 7. UTILITY & NAVIGATION --- */
     .sticky-cta {
       position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
-      background: var(--accent);
-      color: white;
+      background: var(--text);
+      color: var(--bg);
       text-align: center;
       padding: 18px;
       font-family: 'Bebas Neue', sans-serif;
-      letter-spacing: 2px;
       z-index: 9999;
       text-decoration: none;
     }
@@ -166,188 +215,42 @@
       width: 44px;
       height: 44px;
       border-radius: 50%;
-      background: var(--accent);
-      color: white;
+      background: var(--accent) !important;
+      color: var(--bg) !important;
       border: none;
-      font-size: 22px;
       display: none;
       align-items: center;
       justify-content: center;
-      cursor: pointer;
       z-index: 9999;
     }
 
-    .spinner-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, .6);
-      display: none;
+    .theme-toggle,
+    .insta-top-link {
+      position: absolute;
+      top: 20px;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, .15);
+      color: white;
+      display: flex;
       align-items: center;
       justify-content: center;
-      z-index: 10000;
+      border: none;
+      cursor: pointer;
+      z-index: 1000;
     }
 
-    /* ---------- DARK MODE FORM FIXES ---------- */
-    body.dark .form-control,
-    body.dark select,
-    body.dark textarea {
-      background-color: #1f2937;
-      color: #f9fafb;
-      border: 1px solid #374151;
+    .theme-toggle {
+      right: 20px;
     }
 
-    body.dark .form-control::placeholder,
-    body.dark textarea::placeholder {
-      color: #9ca3af;
-      opacity: 1;
+    .insta-top-link {
+      left: 20px;
+      text-decoration: none;
     }
 
-    body.dark select option {
-      background-color: #1f2937;
-      color: #f9fafb;
-    }
-
-    body.dark .form-control:focus,
-    body.dark select:focus,
-    body.dark textarea:focus {
-      border-color: #f97316;
-      box-shadow: 0 0 0 0.15rem rgba(249, 115, 22, 0.35);
-      background-color: #1f2937;
-      color: #ffffff;
-    }
-
-    body.dark .alert-success {
-      background-color: rgba(34, 197, 94, 0.15);
-      color: #bbf7d0;
-      border: 1px solid rgba(34, 197, 94, 0.35);
-    }
-
-    body.dark .alert-danger {
-      background-color: rgba(239, 68, 68, 0.15);
-      color: #fecaca;
-      border: 1px solid rgba(239, 68, 68, 0.35);
-    }
-
-    body.dark #submitBtn {
-      background-color: #111827;
-      border: 1px solid #374151;
-      color: #f9fafb;
-    }
-
-    body.dark #submitBtn:hover {
-      background-color: #1f2937;
-    }
-
-    /* ---------- TESTIMONIAL CARDS ---------- */
-    .testimonial-card {
-      background: var(--card);
-      border-radius: 16px;
-      padding: 24px;
-      height: 100%;
-      border: 1px solid rgba(255, 255, 255, 0.06);
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.35);
-    }
-
-    body.dark .testimonial-card {
-      background: #0f172a;
-      border: 1px solid rgba(255, 255, 255, 0.08);
-    }
-
-    .testimonial-card .stars {
-      color: #facc15;
-      font-size: 18px;
-      letter-spacing: 2px;
-      margin-bottom: 10px;
-    }
-
-    .testimonial-card p {
-      color: var(--text);
-      font-size: 15px;
-      line-height: 1.5;
-      margin-bottom: 12px;
-    }
-
-    .testimonial-card span {
-      color: var(--muted);
-      font-size: 13px;
-    }
-
-    body.dark .google-rating-text {
-      color: #f9fafb !important;
-    }
-
-    /* ---------- PREMIUM SERVICE CARDS ---------- */
-    .service-card-premium {
-      background: var(--card);
-      border-radius: 18px;
-      padding: 28px 24px;
-      height: 100%;
-      border: 1px solid rgba(255, 255, 255, 0.06);
-      box-shadow: 0 12px 35px rgba(0, 0, 0, 0.35);
-      transition: transform 0.25s ease, box-shadow 0.25s ease;
-    }
-
-    .service-card-premium:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 18px 45px rgba(0, 0, 0, 0.45);
-    }
-
-    body.dark .service-card-premium {
-      background: #0f172a;
-      border: 1px solid rgba(255, 255, 255, 0.08);
-    }
-
-    .service-card-premium h5 {
-      font-family: 'Bebas Neue', sans-serif;
-      letter-spacing: 1.5px;
-      margin-top: 14px;
-      margin-bottom: 10px;
-    }
-
-    .service-card-premium p {
-      color: var(--muted);
-      font-size: 15px;
-      line-height: 1.55;
-    }
-
-    .service-icon {
-      font-size: 38px;
-      color: var(--accent);
-    }
-
-    body.dark .services-subtext {
-      color: #f9fafb !important;
-    }
-
-  /* Locate this section in your <style> block */
-#preloader-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #0b0f19; /* Change from #fff to your dark bg color */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  z-index: 9999;
-  transition: opacity 2.5s ease-out; /* Increased for a smoother, slower fade */
-
-}
-
- #preloader-overlay img {
-  max-width: 25%;
-  margin-bottom: 20px;
-  animation: logoZoom 4s infinite alternate; /* Adds a slow pulse/zoom */
-}
-
-@keyframes logoZoom {
-  from { transform: scale(1); }
-  to { transform: scale(1.1); }
-}
-
-    /* Gallery Styling */
+    /* --- 8. CAROUSEL & MEDIA QUERIES --- */
     .carousel-item {
       height: 450px;
       background: #000;
@@ -359,94 +262,31 @@
       opacity: 0.8;
     }
 
-    .carousel-caption {
-      background: rgba(0, 0, 0, 0.6);
-      padding: 15px;
-      border-radius: 12px;
-      bottom: 40px;
-      backdrop-filter: blur(5px);
-    }
-
-    .carousel-caption h5 {
-      font-family: 'Bebas Neue', sans-serif;
-      color: var(--accent);
-      margin: 0;
-    }
-
     .carousel-indicators [data-bs-target] {
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
       background-color: var(--accent);
     }
 
-    /* Mobile Adjustments */
-    @media (max-width: 768px) {
-      .carousel-item {
-        height: 350px;
-      }
-
-      .carousel-caption h5 {
-        font-size: 1.2rem;
-      }
-
-      .carousel-caption p {
-        font-size: 0.8rem;
-      }
-    }
-
-    .insta-top-link {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      /* Positions it on the left */
-      width: 44px;
-      height: 44px;
-      border-radius: 50%;
-      background: rgba(255, 255, 255, .15);
-      color: white;
-      font-size: 22px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      transition: 0.3s;
-      z-index: 1000;
-    }
-
-    .insta-top-link:hover {
-      background: rgba(255, 255, 255, .3);
-      color: #f97316;
-      /* Changes to your accent orange on hover */
-    }
-
-    /* Ensure it stays white in dark mode too */
-    body.dark .insta-top-link {
-      color: white;
-      background: rgba(255, 255, 255, .1);
-    }
-
-    /* Mobile Adjustments for Hero Section */
     @media (max-width: 768px) {
       .hero {
         padding: 40px 15px !important;
-        /* Reduces top/bottom padding from 90px to 40px */
       }
 
       .hero h1 {
         font-size: 2.2rem;
-        /* Slightly smaller heading for better fit */
+      }
+
+      .carousel-item {
+        height: 350px;
       }
 
       #request {
         padding-top: 20px !important;
-        /* Reduces space above the header */
       }
+    }
 
-      #request h2 {
-        margin-top: 0 !important;
-        margin-bottom: 20px !important;
-      }
+    /* Dark Mode Override */
+    body.dark .google-rating-text {
+      color: #ffffff !important
     }
   </style>
 </head>
@@ -468,7 +308,7 @@
       <p>Automotive Tint • Residential Tint • Vinyl Wrapping </p>
       <!-- <a href="tel:3049162052" class="btn btn-dark btn-lg mt-4 fw-bold">Call for an Estimate</a> -->
       <a href="https://app.squareup.com/appointments/book/x4jp12s4s80fgx/L2DA08QR9AZBE/start?hl=en-US&gei=OoJ-aZX5JovJp84PmJTuuQk&rwg_token=AFd1xnGo3DDrItElV3frlwOg8FByLvpG3h2mrFBjZE4dVapKLmn7vM5gC7P15yd67miPYiVjaiXXdOfeDRYoR29sQLPI-Zbdfw%3D%3D"
-        class="btn btn-warning btn-lg mt-4 fw-bold">Book Online</a>
+        class="btn btn-outline-light btn-lg mt-4 fw-bold">Book Online</a>
     </section>
 
     <section class="container py-5">
