--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     }
 
     /* Dark Mode Override */
-    body.dark .google-rating-text {
+    body.dark .google-rating-text, .text-muted {
       color: #ffffff !important
     }
   </style>
